# AI_stylist_backend

./: CLAUDE.md  Dockerfile  fashion.db  main.py  pyproject.toml  requirements.txt  streamlit_app.py  try_on.py
app/: config.py
app/db/: qdrant.py  session.py
app/models/: clothing.py  tools.py
app/routes/: agent_routes.py  ingest.py  items.py
app/services/: agent.py  embedding.py  generate_img.py  ingestion.py  pinterest_search.py  recommendation.py
app/tools/: catalog_tools.py  stylist_tools.py
docs/superpowers/plans/: 2026-03-28-agent-visual-item-selection.md
docs/superpowers/specs/: 2026-03-27-fashion-agent-tools-design.md  2026-03-28-agent-sse-endpoint-design.md  2026-03-28-agent-visual-item-selection-design.md  2026-03-28-streamlit-agent-ui-design.md
scripts/: embedding.ipynb  pinterest_search.py
tests/tools/: test_catalog_tools.py
